--- a/starwars/app/src/main/res/layout/films_list_adapter.xml
+++ b/starwars/app/src/main/res/layout/films_list_adapter.xml
@@ -7,21 +7,17 @@
     android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3">
 
         <TextView
+            android:layout_margin="5dp"
             android:id="@+id/tvFilmName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:theme="@style/TextViewTitle"
+            android:background="@drawable/border_background"/>
 
     </LinearLayout>
 
