--- a/starwars/app/src/main/res/layout/films_list_adapter.xml
+++ b/starwars/app/src/main/res/layout/films_list_adapter.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:layout_margin="5dp"
-            android:id="@+id/tvFilmName"
+            android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:theme="@style/TextViewTitle"
