--- a/starwars/app/src/main/res/layout/fragment_vehicles.xml
+++ b/starwars/app/src/main/res/layout/fragment_vehicles.xml
@@ -1,10 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="3">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/vehicle"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:layout_weight="3">
+
+        <LinearLayout
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Titulo"
+                android:theme="@style/TextViewTitle"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/border_background">
+
+                <TextView
+                    android:id="@+id/tvModel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="model: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/tvManufacturer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="manufacturer: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/tvCostInCredits"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="cost in credits: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/tvLength"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Length: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/tvMaxAtmospheringSpeed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Max Atmosphering Speed: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/tvCrew"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Crew: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/tvPassengers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Passengers: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+                <TextView
+                    android:id="@+id/tvCargoCapacity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cargo Capacity: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+                <TextView
+                    android:id="@+id/tvConsumables"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Consumables: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+                <TextView
+                    android:id="@+id/tvVehicleClass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Vehicle Class: "
+                    android:theme="@style/TextViewMain"
+                    android:layout_margin="10dp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
